--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -1,10 +1,11 @@
 .all-products{
-  display: flex;
+  display: grid;
+  max-width: 1300px;
+  width: 80%;
   flex-wrap: wrap;
   justify-content: center;
   margin: 100px auto;
   width: 400px;
-  max-width: 1200px;
   padding: 0 20px;
   display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -14,10 +15,11 @@
 
 .product-info{
   height: 420px;
-  width: 654px;
+  width: auto;
   margin: 50px auto;
   border-radius: 7px 7px 7px 7px;
   box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   background-color: azure;
+  border: 1px solid #e6e6e6;
 
 }
