--- a/src/styles/Livraison.css
+++ b/src/styles/Livraison.css
@@ -1,19 +1,20 @@
 .livraison{
   background-color: red;
-  height: 200px;
+  height: 100px;
   width: 100auto%;
   margin-left: 0;
 }
 
 .livraison1{
   background-color: blue;
-  height: 200px;
+  height: 100px;
   width: 100%;
+  height: 1500px;
 }
 
 .livraison2{
-  background-color: green;
-  height: 200px;
+  background-color: gray;
+  height: 100px;
   width: 100%;
 }
 
